--- a/lates.html
+++ b/lates.html
@@ -26,7 +26,7 @@
               <a class="nav-link text-white" href="lates.html">LATES PROJECT</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#">ABOUT US</a>
+              <a class="nav-link text-white" href="about.html">ABOUT US</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-white" href="#">TEREKING ORDER</a>
