--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               <a class="nav-link text-white" href="about.html">ABOUT US</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#">TEREKING ORDER</a>
+              <a class="nav-link text-white" href="product.html">PRODUCT</a>
             </li>
         </ul>
     </div>
